<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>keymint_tools</name>
  <version>0.0.0</version>
  <description>The command line tools for the keymint buildsystem.</description>
  <maintainer email="ruffin@osrfoundation.org">Ruffin White</maintainer>
  <license>Apache License 2.0</license>

  <depend>keymint_cli</depend>
  <depend>keymint_package</depend>

  <!-- <buildtool_depend>ament_package</buildtool_depend> -->
  <!-- <buildtool_depend>osrf_pycommon</buildtool_depend> -->

  <!-- <buildtool_export_depend>ament_package</buildtool_export_depend> -->
  <!-- <buildtool_export_depend>osrf_pycommon</buildtool_export_depend> -->

  <!-- <exec_depend>python3-pkg-resources</exec_depend> -->

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
